# quqi-admin-flask

./: .flaskenv  .gitignore  .pre-commit-config.yaml  command.py  flask_configs.py  gunicorn.conf.py  pyproject.toml  readme.md  start.sh
quqi/: __init__.py
quqi/apis/: __init__.py
quqi/apis/v1/: __init__.py
quqi/apis/v1/dashboard/: __init__.py  apis.py  (+5 more)
quqi/common/: __init__.py
quqi/common/decorator/: __init__.py  permission_decorator.py
quqi/common/ip2region/: __init__.py  test.py
quqi/common/returns/: __init__.py  renturn_json.py
quqi/common/utils/: __init__.py  code码统一.txt  constants.py  file_utils.py  gen_chaptcha.py  redis_utils.py  response_code.py  sms_utils.py  utils.py
quqi/extensions/: __init__.py  init_assets.py  init_cors.py  init_csrf_from.py  init_database.py  init_limiter.py  init_login.py  init_migrate.py  init_redis.py  init_session.py
quqi/models/: base.py  user.py
quqi/views/: __init__.py
quqi/views/dashboard/: __init__.py  console.py  index.py  power.py  profiles.py  role.py  user.py  views.py
quqi/views/error/: __init__.py  views.py
quqi/views/passport/: __init__.py  views.py
static/css/: passport.css
static/js/: cookie.js
static/layui/css/: layui.css
static/layuiadmin/lib/: admin.js  index.js
static/layuiadmin/modules/: console.js  logout.js  set.js
static/layuiadmin/style/: admin.css
templates/: base_info.html  console.html  index.html  login.html  personalpage.html  power.html  role.html  user.html
templates/errors/: 400.html  403.html  404.html  429.html  500.html
test/: main.sql  quqiadminflask.sql
(+13 files in other folders)
