[tool.poetry]
name = "quqi-admin-flask"
version = "0.1.0"
description = ""
authors = ["quqi <luyujie19831217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.13.2"
pre-commit = "^3.6.2"
black = "^24.2.0"
commitizen = "^3.15.0"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
pymysql = "^1.1.0"
flask-migrate = "^4.0.5"
flask-login = "^0.6.3"
flask-session = "^0.6.0"
flask-assets = "^2.1.0"
flask-limiter = "^3.5.1"
flask-core = "^2.9.0"
flask-wtf = "^1.2.1"
python-dotenv = "^1.0.1"
flask-cors = "^4.0.0"
redis = "^5.0.1"
flask-restful = "^0.3.10"
captcha = "^0.5.0"
cssmin = "^0.2.0"
jsmin = "^3.0.1"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
